# Audio-Gui

./: .gitignore  CMakeLists.txt  README.md  pulse_alsa_bridge.c  pulse_jack_bridge.c  release-tarball.sh
include/: bridge_peak.h
packaging/: audio-gui.desktop.in  build-deb.sh  install.sh  uninstall.sh
src/: AlsaDevices.cpp  AlsaDevices.h  AlsaMixer.cpp  AlsaMixer.h  BridgeManager.cpp  BridgeManager.h  LevelMeter.cpp  LevelMeter.h  MainWindow.cpp  MainWindow.h  MixerStripWidget.cpp  MixerStripWidget.h  Theme.cpp  Theme.h  main.cpp
